tests/baselines/reference/genericIndexTypeHasSensibleErrorMessage.errors.txt
tests/cases/compiler/genericIndexTypeHasSensibleErrorMessage.ts(1,33): error TS1268: An index signature parameter type must be 'string', 'number', 'symbol', or a template literal type.


==== tests/cases/compiler/genericIndexTypeHasSensibleErrorMessage.ts (1 errors) ====
    type Wat<T extends string> = { [x: T]: string };
                                    ~
!!! error TS1268: An index signature parameter type must be 'string', 'number', 'symbol', or a template literal type.